[gd_scene load_steps=13 format=3 uid="uid://bc5q7xomkxaom"]

[ext_resource type="Script" uid="uid://dhiillgw8x235" path="res://Scenes/TrainingProgram/parts/Cards/ScpEffectCard/scp_effect_card.gd" id="1_t8msh"]
[ext_resource type="PackedScene" uid="uid://cggkdkq5crbw4" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardBody.tscn" id="2_vkpo4"]
[ext_resource type="PackedScene" uid="uid://b51r528fxi561" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerTitle.tscn" id="3_hepfh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n8iws"]

[sub_resource type="ViewportTexture" id="ViewportTexture_t8msh"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_vkpo4"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hepfh"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tob2b"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.735717, 0.247227, 0.9, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qx0l7"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.735717, 0.247227, 0.9, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2idn"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.735717, 0.247227, 0.9, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a12sw"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.735717, 0.247227, 0.9, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oaao5"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ScpEffectCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 175)
offset_right = 160.0
offset_bottom = 38.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_n8iws")
script = ExtResource("1_t8msh")
is_highlighted = true

[node name="CardTextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("ViewportTexture_t8msh")
stretch_mode = 4

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(250, 400)

[node name="CardBody" parent="SubViewport" instance=ExtResource("2_vkpo4")]
card_size = Vector2(250, 400)
border_color = Color(0, 0, 0, 1)

[node name="TextureRect" parent="SubViewport/CardBody" index="0"]
texture = SubResource("ViewportTexture_vkpo4")

[node name="SubViewport" parent="SubViewport/CardBody" index="1"]
size = Vector2i(250, 400)

[node name="CardBody" parent="SubViewport/CardBody/SubViewport/Control" index="0"]
custom_minimum_size = Vector2(250, 400)
offset_right = 250.0
offset_bottom = 400.0

[node name="PanelContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_hepfh")

[node name="FrontDrawerContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer" index="0"]
theme_override_constants/separation = 10

[node name="ScpName" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="0" instance=ExtResource("3_hepfh")]
visible = false
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tob2b")
is_small = true
content = "Roomname"
title = ""
border_color = Color(0.735717, 0.247227, 0.9, 1)

[node name="ScpEffect" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="1" instance=ExtResource("3_hepfh")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qx0l7")
is_small = true
content = "Roomname"
title = "EFFECT"
border_color = Color(0.735717, 0.247227, 0.9, 1)

[node name="ScpBreach" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="2" instance=ExtResource("3_hepfh")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_t2idn")
is_small = true
content = "Roomname"
title = "BREACH EFFECT"
border_color = Color(0.735717, 0.247227, 0.9, 1)

[node name="ScpNeutralize" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="3" instance=ExtResource("3_hepfh")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_a12sw")
is_small = true
content = "Roomname"
title = "NEUTRALIZE EFFECT"
border_color = Color(0.735717, 0.247227, 0.9, 1)

[node name="PanelContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Back" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_oaao5")

[editable path="SubViewport/CardBody"]
